Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

22-Sep-2011 Jean-Marie Simonet
 $ Updating installation ini files: sk-SK. Correcting a typo in com_languages.ini
 + Added Macedonian flag to media/mod_languages/images/ . Thanks Ilija

21-Sep-2011 Mark Dexter
 # Fix sample data to correct #__redirect_links table definition

21-Sep-2011 Jean-Marie Simonet
 $ Updating installation ini files: pt-PT, pt-BR
 # [#26552] Languagefilter plugin - wrong default for menu_association
 $ Adding installation Basque language: eu-ES

20-Sep-2011 Mark Dexter
 # Sample data fixes (Elin Waring)
 # [#26451] Favicon disappears
 # [#24275] Submenu items in deeper menu-levels appear although they have no active parent item

20-Sep-2011 Christophe Demko
 # [#26803] xx-XX.lib_joomla.ini file not installed into /language/xx-XX folder (Jean-Marie Simonet)
 # [#26829] Sample data module pages new styling and style corrections. (Jennifer Marriott, Elin Waring)
 # [#26793] Add joomlacms and cli folders (Elin Waring)
 # [#26836] Update robots.txt due to the commit of 26793
 # [#26837] *Wrong param in display date in category listing (Jean-Marie Simonet)
 # [#26673] Front end article display duplication/omission when author linked to trashed contact or when two contacts linked to same user (Elin Waring)
 # [#26823] Sync JParameter changes from platform 11.2 (Rouven Weßling)

18-Sep-2011 Jean-Marie Simonet
 # [#26827] Loadmodule plugin ignores its style setting. Thanks Elin
 $ Updating installation ini files: pl-PL
 # [#26818] File and package installations are not updateable via the Joomla! Updater. Thanks Michael.

17-Sep-2011 Mark Dexter
 # [#25471] JUpdate target platform test
 # [#26781] Sync more changes form platform 11.2

17-Sep-2011 Jean-Marie Simonet
 $ Updating installation ini files: nl-NL