@@ -32,6 +32,7 @@ COM_LANGUAGES_HEADING_TITLE_NATIVE="Native Title"
 COM_LANGUAGES_HOMEPAGE="Home"
 COM_LANGUAGES_MSG_DEFAULT_LANGUAGE_SAVED="Default Language Saved. <br /><strong class="_QQ_"red"_QQ_">Warning!</strong> When using the multilanguage functionality (i.e. when the plugin System - Languagefilter is enabled) the Site Default Language has to also be a published Content language."
 COM_LANGUAGES_MULTILANGSTATUS_CONTENT_LANGUAGE_PUBLISHED="Published Content Languages"
+COM_LANGUAGES_MULTILANGSTATUS_ERROR_CONTENT_LANGUAGE="A Default Home page is assigned to the <strong>%s</strong> Content Language although a Site Language for this Content Language is not installed AND/OR the Content Language is not published."
 COM_LANGUAGES_MULTILANGSTATUS_HOMES_MISSING="This site is set as a multilanguage site. One or more of the Default Home pages for the published Content languages are missing although the Language Filter plugin is enabled OR/AND one or more  Language Switcher modules are published"
 COM_LANGUAGES_MULTILANGSTATUS_HOMES_PUBLISHED="Published Default Home pages"
 COM_LANGUAGES_MULTILANGSTATUS_HOMES_PUBLISHED_ALL="1 assigned to language 'All'"
@@ -42,6 +43,7 @@ COM_LANGUAGES_MULTILANGSTATUS_LANGUAGEFILTER="Language Filter Plugin"
 COM_LANGUAGES_MULTILANGSTATUS_LANGUAGEFILTER_DISABLED="This site is set as a multilanguage site. The Languagefilter plugin is not enabled although one or more Language Switcher modules OR/AND one or more specific Content language Default Home pages are published."
 COM_LANGUAGES_MULTILANGSTATUS_NONE="This site is not set as a multilanguage site."
 COM_LANGUAGES_MULTILANGSTATUS_SITE_LANG_PUBLISHED="Published Site Languages"
+COM_LANGUAGES_MULTILANGSTATUS_USELESS_HOMES="This site is not set as a multilanguage site.<br /><strong>Note</strong>: at least one Default Home page is assigned to a Content Language. This will not break a monolanguage site but is useless."
 COM_LANGUAGES_N_ITEMS_DELETED="%d Content Languages successfully deleted"
 COM_LANGUAGES_N_ITEMS_DELETED_1="%d Content Language successfully deleted"
 COM_LANGUAGES_N_ITEMS_PUBLISHED="%d Content Languages successfully published"
